# pycharm-external-tools

./: .gitignore  .pre-commit-config.yaml  README.md  monkeytype_config.py  pyproject.toml
pycharm_external_tools/: __init__.py
pycharm_external_tools/jupyter_notebook_snippets/: convert_ipynb_to_py.py
pycharm_external_tools/manage_fastapi/: fastapi_startproject.py  wrappers.py
pycharm_external_tools/monkeytype_assistant/: create_monkeytype_patch.py  monkeytype_run.py  test_monkeytype_run_external_imports.py
pycharm_external_tools/poetry_dynamic_versioning/: poetry_dynamic_versioning_wrapper.py  settings_template.toml
pycharm_external_tools/pre_commit_snippets/: pre_commit_sample.txt  pre_commit_sample.yaml  pre_commit_wrapper.py
pycharm_external_tools/project_manager_snippets/: create_conda_env_for_existing_pyproject_toml.py  export_sublime_text_build_config.py  generate_sublime_text_3_build_config_from_conda_env.py  init_current_dir_as_a_poetry_conda_project.py  migrate_pyproject_toml_to_pyproject_toml.py  migrate_requirements_txt_to_pyproject_toml.py  project_manager_wrapper.py  test_external_import.py  wrappers.py
pycharm_external_tools/tkinter_snippets/: tk_snippets.py
scripts/: create_setup.py
