[tool.poetry]
name = "pycharm_external_tools"
version = "0.0.1.dev23+b96a326"
description = ""
authors = ["JD <10216562+joeld1@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
MonkeyType = "^21.5.0"
pyment = { git = "https://github.com/dadadel/pyment.git" }
black = "^21.5b2"
isort = "^5.8.0"
manage-fastapi = "^1.0.0"
poetry-core = "^1.0.3"
notebooktoall = "^0.2.3"
pyperclip = "^1.8.2"
project-manager = { git = "https://github.com/joeld1/project-manager.git", rev = "main" }
pytest = { version = "^6.2.4", optional = true }
pytest-cov = { version = "^2.12.1", optional = true }
autoflake = { version = "^1.4", optional = true }
flake8 = { version = "^3.9.2", optional = true }
mypy = { version = "^0.910", optional = true }
pre-commit = { version = "^2.13.0", optional = true }
notebook = { version = "^6.4.0", optional = true }
ipykernel = { version = "^6.0.1", optional = true }
pipreqs = { version = "^0.4.10", optional = true }
wily = { version = "^1.20.0", optional = true }
poetry-dynamic-versioning = { version = "^0.13.0", optional = true }
interrogate = { extras = ["png"], version = "^1.4.0", optional = true }

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
pattern = "commit"
bump = true

[tool.poetry-dynamic-versioning.substitution]
enable = true
vcs = "git"
pattern = "commit"

[tool.poetry.extras]
dev_tools = ["pytest", "pytest-cov", "autoflake", "flake8", "mypy", "pre-commit", "black", "isort", "notebook", "ipykernel", "pipreqs", "wily", "poetry-dynamic-versioning", "interrogate"]
